update docs for courses
