# internal/ports/http/handlers/courses/queries/router.go
@@ -1,17 +1,27 @@
 package queries
 
 import (
+	"github.com/Rasikrr/learning_platform/internal/ports/http/middlewares"
 	"github.com/Rasikrr/learning_platform/internal/services/courses"
+	"github.com/Rasikrr/learning_platform/internal/services/enrollments"
 	"net/http"
 )
 
 type Controller struct {
-	coursesService courses.Service
+	coursesService     courses.Service
+	enrollmentsService enrollments.Service
+	m                  *middlewares.AuthMiddleware
 }
 
-func NewController(coursesService courses.Service) *Controller {
+func NewController(
+	coursesService courses.Service,
+	enrollmentsService enrollments.Service,
+	m *middlewares.AuthMiddleware,
+) *Controller {
 	return &Controller{
-		coursesService: coursesService,
+		coursesService:     coursesService,
+		enrollmentsService: enrollmentsService,
+		m:                  m,
 	}
 }
 
@@ -19,7 +29,7 @@ func (c *Controller) Init(r *http.ServeMux) {
 	r.HandleFunc("POST /api/v1/courses", c.getCourses)
 	r.HandleFunc("GET /api/v1/courses/categories", c.getCategories)
 	r.HandleFunc("GET /api/v1/courses/{id}", c.getCourse)
-	r.HandleFunc("GET /api/v1/courses/topic/{id}/content", c.getCourseTopicContent)
-	r.HandleFunc("GET /api/v1/courses/topic/{id}/quizzes", c.getCourseTopicQuizzes)
-	r.HandleFunc("GET /api/v1/courses/topic/{id}/tasks/{order}", c.getCourseTopicTasks)
+	r.HandleFunc("GET /api/v1/courses/topic/content", c.m.Handle(c.getCourseTopicContent))
+	r.HandleFunc("GET /api/v1/courses/topic/quizzes", c.m.Handle(c.getCourseTopicQuizzes))
+	r.HandleFunc("GET /api/v1/courses/topic/tasks", c.m.Handle(c.getCourseTopicTasks))
 }
